fix: sus character overlaping with text

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -39,8 +39,6 @@
 
 body {
   font-family: 'Lan';
-  @apply portrait:h-[130vh] landscape:overflow-hidden;
-  /* @apply overflow-x-hidden landscape:overflow-hidden; */
 }
 
 canvas {
